[gd_scene load_steps=9 format=3 uid="uid://c26ytx1m2b0sm"]

[ext_resource type="PackedScene" uid="uid://bid5n228xcinl" path="res://scenes/box.tscn" id="1_jedrf"]
[ext_resource type="Script" uid="uid://baewtts3ylpa0" path="res://scripts/world_scene.gd" id="1_ow06g"]
[ext_resource type="PackedScene" uid="uid://bxhkm41gc4gl6" path="res://scenes/player.tscn" id="2_kjcoe"]
[ext_resource type="PackedScene" uid="uid://buyxeqalv2e42" path="res://scenes/enemy.tscn" id="3_qiqor"]
[ext_resource type="PackedScene" uid="uid://dieyoo3dq350l" path="res://scenes/enemyBT.tscn" id="4_krmi5"]
[ext_resource type="PackedScene" uid="uid://dj8e230cbfxif" path="res://scenes/cage.tscn" id="5_cage"]

[sub_resource type="QuadMesh" id="QuadMesh_e8udx"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ow06g"]
vertices = PackedVector2Array(2179.7969, 297.60156, 2395.2031, 297.60156, 3872.4766, 880.90625, 3365.711, 883.4922, 1214.2031, 846.60156, 1214.2031, 631.2031, 1770.2031, 1957.6016, 2781.7969, 1778.6016, 2997.2031, 1778.6016, 166.96094, 2576.1406, 4058.3438, 25.84375, 4065.0469, 2572.25, 3864.1172, 1573.8203, 3371.6797, 1564.7969, 2997.2031, 1563.2031, 2164.2031, 1233.6016, 2164.2031, 1018.2031, 2781.7969, 1563.2031, 2395.2031, 82.203125, 1948.7969, 1018.2031, 1554.7969, 1957.6016, 1554.7969, 1742.2031, 174.63281, 28.75, 998.7969, 846.60156, 1770.2031, 1742.2031, 1948.7969, 1233.6016, 2179.7969, 82.203125, 998.7969, 631.2031)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 9), PackedInt32Array(2, 10, 11, 12), PackedInt32Array(13, 12, 8, 14), PackedInt32Array(3, 13, 14, 15, 16), PackedInt32Array(15, 14, 17), PackedInt32Array(10, 2, 1, 18), PackedInt32Array(4, 3, 16, 19), PackedInt32Array(12, 11, 9, 8), PackedInt32Array(20, 6, 9), PackedInt32Array(21, 20, 9, 22, 23), PackedInt32Array(15, 17, 7, 6, 24, 25), PackedInt32Array(22, 10, 18, 26), PackedInt32Array(22, 26, 0, 5, 27), PackedInt32Array(4, 19, 25, 24, 21, 23), PackedInt32Array(23, 22, 27)])
outlines = Array[PackedVector2Array]([PackedVector2Array(119, -27, 4114, -30, 4121, 2628, 111, 2632), PackedVector2Array(3422, 939, 3427, 1510, 3809, 1517, 3816, 937)])
parsed_geometry_type = 1
agent_radius = 55.8

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_ow06g")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0, 0.26028818, 0, 1)
position = Vector2(1129, 764)
scale = Vector2(4021.25, 2683.5)
mesh = SubResource("QuadMesh_e8udx")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_kjcoe")]
position = Vector2(397, 357)
scale = Vector2(0.5, 0.5)

[node name="Enemy" parent="." instance=ExtResource("3_qiqor")]
position = Vector2(1007, 111)
scale = Vector2(0.5, 0.5)

[node name="Enemy1" parent="." instance=ExtResource("3_qiqor")]
position = Vector2(-433, 1206)
scale = Vector2(0.5, 0.5)

[node name="Enemy2" parent="." instance=ExtResource("3_qiqor")]
position = Vector2(2059, 1275)
scale = Vector2(0.5, 0.5)

[node name="Enemy4(BT)" parent="." instance=ExtResource("4_krmi5")]
position = Vector2(667, 1495)
scale = Vector2(0.5, 0.5)

[node name="Enemy5(BT)" parent="." instance=ExtResource("4_krmi5")]
position = Vector2(1672, 396)
scale = Vector2(0.5, 0.5)

[node name="MainCamera" type="Camera2D" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-1013, -550)
navigation_polygon = SubResource("NavigationPolygon_ow06g")
navigation_layers = 7
metadata/_edit_group_ = true

[node name="Box5" parent="NavigationRegion2D" instance=ExtResource("1_jedrf")]
position = Vector2(2299, 196)
scale = Vector2(0.2, 0.2)

[node name="Box4" parent="NavigationRegion2D" instance=ExtResource("1_jedrf")]
position = Vector2(2068, 1132)
scale = Vector2(0.19999999, 0.19999999)

[node name="Box3" parent="NavigationRegion2D" instance=ExtResource("1_jedrf")]
position = Vector2(1674.0001, 1856)
scale = Vector2(0.2, 0.2)

[node name="Box2" parent="NavigationRegion2D" instance=ExtResource("1_jedrf")]
position = Vector2(2901, 1677)
scale = Vector2(0.2, 0.2)

[node name="Box" parent="NavigationRegion2D" instance=ExtResource("1_jedrf")]
position = Vector2(1118, 745)
scale = Vector2(0.2, 0.2)

[node name="Cage" parent="." instance=ExtResource("5_cage")]
position = Vector2(2568, 868)
